--- a/youtubetest.ipynb
+++ b/youtubetest.ipynb
@@ -1011,6 +1011,40 @@
     "video_info = get_video_info(video_Ids)\n",
     "video_info"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get comment info\n",
+    "def get_comment_info(video_ids):\n",
+    "    Comment_data=[]\n",
+    "    try:\n",
+    "        for video_id in video_ids:\n",
+    "            request=youtube.commentThreads().list(\n",
+    "                part=\"snippet\",\n",
+    "                videoId=video_id,\n",
+    "                maxResults=50\n",
+    "            )\n",
+    "            response=request.execute()\n",
+    "\n",
+    "            for item in response['items']:\n",
+    "                data=dict(Comment_Id=item['snippet']['topLevelComment']['id'],\n",
+    "                        Video_Id=item['snippet']['topLevelComment']['snippet']['videoId'],\n",
+    "                        Comment_Text=item['snippet']['topLevelComment']['snippet']['textDisplay'],\n",
+    "                        Comment_Author=item['snippet']['topLevelComment']['snippet']['authorDisplayName'],\n",
+    "                        Comment_Published=item['snippet']['topLevelComment']['snippet']['publishedAt'])\n",
+    "                \n",
+    "                Comment_data.append(data)\n",
+    "                \n",
+    "    except:\n",
+    "        pass\n",
+    "    return Comment_data\n",
+    "\n",
+    "comment_info= get_comment_info(video_Ids)\n"
+   ]
   }
  ],
  "metadata": {
