db conn and insert table

--- a/youtubetest.ipynb
+++ b/youtubetest.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from googleapiclient.discovery import build\n",
-    "from pymongo import MongoClient"
+    "from pymongo import MongoClient\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "import mysql.connector\n",
+    "from mysql.connector import errorcode"
    ]
   },
   {
@@ -29,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +412,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@UC5kfwoiD24gJkVkcngaR9Vw',\n",
        "  'Published_Date': '2023-05-03T07:00:12Z',\n",
        "  'Duration': 'PT1H5M8S',\n",
-       "  'Views': '821',\n",
+       "  'Views': '822',\n",
        "  'Likes': None,\n",
        "  'Comments': '8',\n",
        "  'Favorite_Count': '0',\n",
@@ -438,7 +442,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@freeDevopsCourse',\n",
        "  'Published_Date': '2023-05-01T06:30:07Z',\n",
        "  'Duration': 'PT1H4M54S',\n",
-       "  'Views': '3867',\n",
+       "  'Views': '3868',\n",
        "  'Likes': None,\n",
        "  'Comments': '22',\n",
        "  'Favorite_Count': '0',\n",
@@ -453,7 +457,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@freeDevopsCourse',\n",
        "  'Published_Date': '2023-04-27T13:00:11Z',\n",
        "  'Duration': 'PT35M18S',\n",
-       "  'Views': '4973',\n",
+       "  'Views': '4974',\n",
        "  'Likes': None,\n",
        "  'Comments': '11',\n",
        "  'Favorite_Count': '0',\n",
@@ -483,7 +487,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@UC5kfwoiD24gJkVkcngaR9Vw',\n",
        "  'Published_Date': '2021-06-03T06:59:57Z',\n",
        "  'Duration': 'PT46M48S',\n",
-       "  'Views': '4810',\n",
+       "  'Views': '4811',\n",
        "  'Likes': None,\n",
        "  'Comments': '8',\n",
        "  'Favorite_Count': '0',\n",
@@ -693,7 +697,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@UC5kfwoiD24gJkVkcngaR9Vw',\n",
        "  'Published_Date': '2021-06-03T06:54:17Z',\n",
        "  'Duration': 'PT53M54S',\n",
-       "  'Views': '2932',\n",
+       "  'Views': '2933',\n",
        "  'Likes': '16',\n",
        "  'Comments': '0',\n",
        "  'Favorite_Count': '0',\n",
@@ -738,7 +742,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@UC5kfwoiD24gJkVkcngaR9Vw',\n",
        "  'Published_Date': '2021-06-03T06:53:20Z',\n",
        "  'Duration': 'PT1H8M30S',\n",
-       "  'Views': '3883',\n",
+       "  'Views': '3885',\n",
        "  'Likes': '11',\n",
        "  'Comments': '0',\n",
        "  'Favorite_Count': '0',\n",
@@ -798,7 +802,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@UC5kfwoiD24gJkVkcngaR9Vw',\n",
        "  'Published_Date': '2021-06-03T06:51:56Z',\n",
        "  'Duration': 'PT46M37S',\n",
-       "  'Views': '3929',\n",
+       "  'Views': '3930',\n",
        "  'Likes': '14',\n",
        "  'Comments': '0',\n",
        "  'Favorite_Count': '0',\n",
@@ -828,7 +832,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@freeDevopsCourse',\n",
        "  'Published_Date': '2021-05-24T18:52:03Z',\n",
        "  'Duration': 'PT45M54S',\n",
-       "  'Views': '8357',\n",
+       "  'Views': '8358',\n",
        "  'Likes': '22',\n",
        "  'Comments': '4',\n",
        "  'Favorite_Count': '0',\n",
@@ -843,7 +847,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@freeDevopsCourse',\n",
        "  'Published_Date': '2021-02-14T20:18:26Z',\n",
        "  'Duration': 'PT1H19M7S',\n",
-       "  'Views': '13139',\n",
+       "  'Views': '13140',\n",
        "  'Likes': '78',\n",
        "  'Comments': '15',\n",
        "  'Favorite_Count': '0',\n",
@@ -873,7 +877,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@freeDevopsCourse',\n",
        "  'Published_Date': '2021-02-14T20:02:26Z',\n",
        "  'Duration': 'PT1H10M12S',\n",
-       "  'Views': '80258',\n",
+       "  'Views': '80276',\n",
        "  'Likes': '586',\n",
        "  'Comments': '37',\n",
        "  'Favorite_Count': '0',\n",
@@ -903,7 +907,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@UC5kfwoiD24gJkVkcngaR9Vw',\n",
        "  'Published_Date': '2021-02-14T20:01:48Z',\n",
        "  'Duration': 'PT50M49S',\n",
-       "  'Views': '26425',\n",
+       "  'Views': '26429',\n",
        "  'Likes': '138',\n",
        "  'Comments': '8',\n",
        "  'Favorite_Count': '0',\n",
@@ -918,7 +922,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@freeDevopsCourse',\n",
        "  'Published_Date': '2021-02-14T20:01:31Z',\n",
        "  'Duration': 'PT56M13S',\n",
-       "  'Views': '14294',\n",
+       "  'Views': '14299',\n",
        "  'Likes': '61',\n",
        "  'Comments': '3',\n",
        "  'Favorite_Count': '0',\n",
@@ -948,7 +952,7 @@
        "  'Description': 'Subscribe: https://www.youtube.com/@UC5kfwoiD24gJkVkcngaR9Vw',\n",
        "  'Published_Date': '2021-02-14T20:00:13Z',\n",
        "  'Duration': 'PT22M35S',\n",
-       "  'Views': '8325',\n",
+       "  'Views': '8326',\n",
        "  'Likes': '28',\n",
        "  'Comments': '3',\n",
        "  'Favorite_Count': '0',\n",
@@ -986,7 +990,7 @@
        "  'Caption_Status': 'false'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,11 +1093,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "mongo_db = channel_details(\"UCctcLdajnkxHT-WziLGc5fA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to the RDS MySQL instance successfully\n",
+      "MySQL connection is closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "rds_user = 'admin'\n",
+    "rds_password = 'administrator'\n",
+    "rds_host = 'database.cd6808ymyl01.ap-south-1.rds.amazonaws.com'\n",
+    "rds_port = '3306'\n",
+    "rds_db = 'youtube'\n",
+    "try:\n",
+    "    connection = mysql.connector.connect(\n",
+    "        host=rds_host,\n",
+    "        user=rds_user,\n",
+    "        password=rds_password,\n",
+    "        database=rds_db,\n",
+    "        port = rds_port\n",
+    "    )\n",
+    "    cursor = connection.cursor()\n",
+    "    print(\"Connected to the RDS MySQL instance successfully\")\n",
+    "    create_db_query = \"\"\" create table if not exists channels(Channel_Name varchar(100),\n",
+    "                                                            Channel_Id varchar(80) primary key,\n",
+    "                                                            Subscribers bigint,\n",
+    "                                                            Views bigint,\n",
+    "                                                            Total_Videos int,\n",
+    "                                                            Channel_Description text,\n",
+    "                                                            Playlist_Id varchar(80))\"\"\"\n",
+    "    qr = cursor.execute(create_db_query)\n",
+    "    \n",
+    "except:\n",
+    "    print(\"not connected\")\n",
+    "finally:\n",
+    "    if connection.is_connected():\n",
+    "        cursor.close()\n",
+    "        connection.close()\n",
+    "        print(\"MySQL connection is closed\")\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
