error rectified and pushed to mysql

--- a/youtubetest.ipynb
+++ b/youtubetest.ipynb
@@ -2359,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2387,6 +2387,7 @@
     "    for i in range(len(vi_data[\"video_information\"])):\n",
     "        vi_list.append(vi_data[\"video_information\"][i])\n",
     "df_3 = pd.DataFrame(vi_list)\n",
+    "df_3['Tags'] = df_3['Tags'].apply(lambda x: ', '.join(x) if isinstance(x, list) else x)\n",
     "#comments\n",
     "com_list = []\n",
     "db = client[\"youtube\"]\n",
@@ -2401,9 +2402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame uploaded to MySQL RDS table 'youtube' successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "#upload datas to mysql \n",
     "mysql_conn = mysql.connector.connect(\n",
@@ -2415,16 +2424,16 @@
     "\n",
     "# Create SQLAlchemy engine\n",
     "engine = create_engine(f'mysql+mysqlconnector://{rds_user}:{rds_password}@{rds_host}/{rds_db}')\n",
-    "\n",
+    "table = \"youtube\"\n",
     "# DataFrame to MySQL\n",
     "table_name_1 = 'channels'\n",
     "df.to_sql(name=table_name, con=engine, if_exists='replace', index=False )\n",
     "table_name_2 = 'playlists'\n",
     "df_2.to_sql(name=table_name_2, con=engine, if_exists='replace', index=False )\n",
-    "#table_name_3 = 'videos'\n",
-    "#df_3.to_sql(name=table_name_3, con=engine, if_exists='replace', index=False )\n",
     "table_name_4 = 'comments'\n",
     "df_4.to_sql(name=table_name_4, con=engine, if_exists='replace', index=False )\n",
+    "table_name_3 = 'videos'\n",
+    "df_3.to_sql(name=table_name_3, con=engine, if_exists='replace', index=False )\n",
     "\n",
     "# Commit the transaction\n",
     "mysql_conn.commit()\n",
@@ -2432,7 +2441,348 @@
     "# Close connections\n",
     "mysql_conn.close()\n",
     "\n",
-    "print(f\"DataFrame uploaded to MySQL RDS table '{table_name}' successfully.\")"
+    "print(f\"DataFrame uploaded to MySQL RDS table '{table}' successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel_Name</th>\n",
+       "      <th>Channel_Id</th>\n",
+       "      <th>Video_Id</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Tags</th>\n",
+       "      <th>Thumbnail</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Published_Date</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Views</th>\n",
+       "      <th>Likes</th>\n",
+       "      <th>Comments</th>\n",
+       "      <th>Favorite_Count</th>\n",
+       "      <th>Definition</th>\n",
+       "      <th>Caption_Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>LxM5HIwnbTI</td>\n",
+       "      <td>11. aws ec2 elastic cloud computing in Tamil V...</td>\n",
+       "      <td>#Docker #DockerTutorials, #Jenkins #JenkinsTut...</td>\n",
+       "      <td>https://i.ytimg.com/vi/LxM5HIwnbTI/default.jpg</td>\n",
+       "      <td>AWS tamil handson practical \\n#tamil \\n#awsclo...</td>\n",
+       "      <td>2024-05-11T09:30:06Z</td>\n",
+       "      <td>PT39M30S</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>hd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>CobD9WFHJ6A</td>\n",
+       "      <td>10. aws efs elastic file share in Tamil</td>\n",
+       "      <td>#Docker #DockerTutorials, #Jenkins #JenkinsTut...</td>\n",
+       "      <td>https://i.ytimg.com/vi/CobD9WFHJ6A/default.jpg</td>\n",
+       "      <td>AWS tamil handson practical \\n#tamil \\n#awsclo...</td>\n",
+       "      <td>2024-05-10T09:30:03Z</td>\n",
+       "      <td>PT27M38S</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>hd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>XTrdUU1Qc4Q</td>\n",
+       "      <td>9. aws s3 simple storage service in Tamil</td>\n",
+       "      <td>#Docker #DockerTutorials, #Jenkins #JenkinsTut...</td>\n",
+       "      <td>https://i.ytimg.com/vi/XTrdUU1Qc4Q/default.jpg</td>\n",
+       "      <td>AWS tamil handson practical \\n#tamil \\n#awsclo...</td>\n",
+       "      <td>2024-05-08T21:30:02Z</td>\n",
+       "      <td>PT26M51S</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>hd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>AuMfpXVKf34</td>\n",
+       "      <td>10. azure peering networking in Tamil</td>\n",
+       "      <td>azure, azuretamil, vnet, az104tamil, az-104, a...</td>\n",
+       "      <td>https://i.ytimg.com/vi/AuMfpXVKf34/default.jpg</td>\n",
+       "      <td>Azure cloud in Tamil what is cloud\\n\\n#azureta...</td>\n",
+       "      <td>2024-05-08T09:30:05Z</td>\n",
+       "      <td>PT21M</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>hd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>fZ1bQWkdiDs</td>\n",
+       "      <td>9. azure nats networking in Tamil</td>\n",
+       "      <td>azure, azuretamil, vnet, az104tamil, az-104, a...</td>\n",
+       "      <td>https://i.ytimg.com/vi/fZ1bQWkdiDs/default.jpg</td>\n",
+       "      <td>Azure cloud in Tamil what is cloud\\n\\n#azureta...</td>\n",
+       "      <td>2024-05-07T09:30:17Z</td>\n",
+       "      <td>PT33M18S</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>hd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>L7DYpzh8zgU</td>\n",
+       "      <td>How to install the Kali Linux 2020.2 OS in lap...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://i.ytimg.com/vi/L7DYpzh8zgU/default.jpg</td>\n",
+       "      <td>#kalilinux os \\n#kalilinux \\n#kalilinux 2020.2...</td>\n",
+       "      <td>2020-08-07T04:17:58Z</td>\n",
+       "      <td>PT10M58S</td>\n",
+       "      <td>98</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>vym00eLryQg</td>\n",
+       "      <td>Python mini project instagram web scraping</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://i.ytimg.com/vi/vym00eLryQg/default.jpg</td>\n",
+       "      <td>#pycharm \\n#python \\n#instagram \\n#linux \\n#Tw...</td>\n",
+       "      <td>2020-08-07T03:56:27Z</td>\n",
+       "      <td>PT2M43S</td>\n",
+       "      <td>123</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>hd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>91ueYIN4KF0</td>\n",
+       "      <td>How to install Ubuntu os single boot and dual ...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://i.ytimg.com/vi/91ueYIN4KF0/default.jpg</td>\n",
+       "      <td>#Ubuntu \\n#linux \\n#rosaimagewriter \\n#dualboo...</td>\n",
+       "      <td>2020-08-07T03:44:32Z</td>\n",
+       "      <td>PT8M4S</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>KSmw7QjQlDA</td>\n",
+       "      <td>How to install Zorin os lite version of Ubuntu...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://i.ytimg.com/vi/KSmw7QjQlDA/default.jpg</td>\n",
+       "      <td>#zorin \\n#Ubuntu \\n#esayos \\n#twinsaitech \\nIt...</td>\n",
+       "      <td>2020-08-07T03:27:32Z</td>\n",
+       "      <td>PT5M41S</td>\n",
+       "      <td>237</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>Twin Sai Tech</td>\n",
+       "      <td>UC_oEMYOCgK5-dZ1A2AIH6KQ</td>\n",
+       "      <td>O5_k8DqhDjE</td>\n",
+       "      <td>How to download all udemy paid course for free...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://i.ytimg.com/vi/O5_k8DqhDjE/default.jpg</td>\n",
+       "      <td>Thanks for supporting friends 🔥🔥😓\\n\\nUdemy lin...</td>\n",
+       "      <td>2020-08-06T14:30:48Z</td>\n",
+       "      <td>PT4M20S</td>\n",
+       "      <td>466</td>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>hd</td>\n",
+       "      <td>false</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Channel_Name                Channel_Id     Video_Id  \\\n",
+       "0   Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  LxM5HIwnbTI   \n",
+       "1   Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  CobD9WFHJ6A   \n",
+       "2   Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  XTrdUU1Qc4Q   \n",
+       "3   Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  AuMfpXVKf34   \n",
+       "4   Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  fZ1bQWkdiDs   \n",
+       "..            ...                       ...          ...   \n",
+       "86  Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  L7DYpzh8zgU   \n",
+       "87  Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  vym00eLryQg   \n",
+       "88  Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  91ueYIN4KF0   \n",
+       "89  Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  KSmw7QjQlDA   \n",
+       "90  Twin Sai Tech  UC_oEMYOCgK5-dZ1A2AIH6KQ  O5_k8DqhDjE   \n",
+       "\n",
+       "                                                Title  \\\n",
+       "0   11. aws ec2 elastic cloud computing in Tamil V...   \n",
+       "1             10. aws efs elastic file share in Tamil   \n",
+       "2           9. aws s3 simple storage service in Tamil   \n",
+       "3               10. azure peering networking in Tamil   \n",
+       "4                   9. azure nats networking in Tamil   \n",
+       "..                                                ...   \n",
+       "86  How to install the Kali Linux 2020.2 OS in lap...   \n",
+       "87         Python mini project instagram web scraping   \n",
+       "88  How to install Ubuntu os single boot and dual ...   \n",
+       "89  How to install Zorin os lite version of Ubuntu...   \n",
+       "90  How to download all udemy paid course for free...   \n",
+       "\n",
+       "                                                 Tags  \\\n",
+       "0   #Docker #DockerTutorials, #Jenkins #JenkinsTut...   \n",
+       "1   #Docker #DockerTutorials, #Jenkins #JenkinsTut...   \n",
+       "2   #Docker #DockerTutorials, #Jenkins #JenkinsTut...   \n",
+       "3   azure, azuretamil, vnet, az104tamil, az-104, a...   \n",
+       "4   azure, azuretamil, vnet, az104tamil, az-104, a...   \n",
+       "..                                                ...   \n",
+       "86                                               None   \n",
+       "87                                               None   \n",
+       "88                                               None   \n",
+       "89                                               None   \n",
+       "90                                               None   \n",
+       "\n",
+       "                                         Thumbnail  \\\n",
+       "0   https://i.ytimg.com/vi/LxM5HIwnbTI/default.jpg   \n",
+       "1   https://i.ytimg.com/vi/CobD9WFHJ6A/default.jpg   \n",
+       "2   https://i.ytimg.com/vi/XTrdUU1Qc4Q/default.jpg   \n",
+       "3   https://i.ytimg.com/vi/AuMfpXVKf34/default.jpg   \n",
+       "4   https://i.ytimg.com/vi/fZ1bQWkdiDs/default.jpg   \n",
+       "..                                             ...   \n",
+       "86  https://i.ytimg.com/vi/L7DYpzh8zgU/default.jpg   \n",
+       "87  https://i.ytimg.com/vi/vym00eLryQg/default.jpg   \n",
+       "88  https://i.ytimg.com/vi/91ueYIN4KF0/default.jpg   \n",
+       "89  https://i.ytimg.com/vi/KSmw7QjQlDA/default.jpg   \n",
+       "90  https://i.ytimg.com/vi/O5_k8DqhDjE/default.jpg   \n",
+       "\n",
+       "                                          Description        Published_Date  \\\n",
+       "0   AWS tamil handson practical \\n#tamil \\n#awsclo...  2024-05-11T09:30:06Z   \n",
+       "1   AWS tamil handson practical \\n#tamil \\n#awsclo...  2024-05-10T09:30:03Z   \n",
+       "2   AWS tamil handson practical \\n#tamil \\n#awsclo...  2024-05-08T21:30:02Z   \n",
+       "3   Azure cloud in Tamil what is cloud\\n\\n#azureta...  2024-05-08T09:30:05Z   \n",
+       "4   Azure cloud in Tamil what is cloud\\n\\n#azureta...  2024-05-07T09:30:17Z   \n",
+       "..                                                ...                   ...   \n",
+       "86  #kalilinux os \\n#kalilinux \\n#kalilinux 2020.2...  2020-08-07T04:17:58Z   \n",
+       "87  #pycharm \\n#python \\n#instagram \\n#linux \\n#Tw...  2020-08-07T03:56:27Z   \n",
+       "88  #Ubuntu \\n#linux \\n#rosaimagewriter \\n#dualboo...  2020-08-07T03:44:32Z   \n",
+       "89  #zorin \\n#Ubuntu \\n#esayos \\n#twinsaitech \\nIt...  2020-08-07T03:27:32Z   \n",
+       "90  Thanks for supporting friends 🔥🔥😓\\n\\nUdemy lin...  2020-08-06T14:30:48Z   \n",
+       "\n",
+       "    Duration Views Likes Comments Favorite_Count Definition Caption_Status  \n",
+       "0   PT39M30S    71     2        0              0         hd          false  \n",
+       "1   PT27M38S    27     1        0              0         hd          false  \n",
+       "2   PT26M51S    17     2        0              0         hd          false  \n",
+       "3      PT21M    26     2        0              0         hd          false  \n",
+       "4   PT33M18S    10     2        0              0         hd          false  \n",
+       "..       ...   ...   ...      ...            ...        ...            ...  \n",
+       "86  PT10M58S    98     6        2              0         sd          false  \n",
+       "87   PT2M43S   123     5        0              0         hd          false  \n",
+       "88    PT8M4S   100     4        0              0         sd          false  \n",
+       "89   PT5M41S   237     3        2              0         sd          false  \n",
+       "90   PT4M20S   466    30        6              0         hd          false  \n",
+       "\n",
+       "[91 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_3['Tags'] = df_3['Tags'].apply(lambda x: ', '.join(x) if isinstance(x, list) else x)\n",
+    "\n",
+    "\n",
+    "        \n"
    ]
   }
  ],
